tests/integration/errors/test_copy_of_non_struct.sn
# Error test: copyOf() on non-struct type

fn main(): void =>
  var x: int = 42
  var y: int = copyOf(x)
  print($"{y}")
